tests/vertical-slice/reject/closure_capture_whole_value_match_arm.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let c = true;
    let _f = || {
        match c {
            true => { items },
            false => { items },
        }
    };
}
